spec/fail/bad-strings-and-idents.scm
"\x;"
"\x20"
"\x10000;\"
'|"
#\x12345
'|\x;|
'|\x